<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skycontroller2ActivityLayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.ensisa.bebop2controller.activity.Bebop2Activity">

    <fr.ensisa.bebop2controller.view.Bebop2VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/downloadButton"
        android:layout_toStartOf="@+id/backFlipButton"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/loadingAnimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/primary_high" />

        <ImageView
            android:id="@+id/horizonImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/horizon"
            tools:ignore="ContentDescription"
            android:visibility="invisible" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/bar_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/droneIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_drone"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/droneBatteryIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_battery_100"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/droneBatteryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no_percentage"
            android:textColor="@color/primary_high" />

        <ImageView
            android:id="@+id/controllerIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_controller"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/controllerBatteryIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_battery_100"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/controllerBatteryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no_percentage"
            android:textColor="@color/primary_high" />

        <ImageView
            android:id="@+id/altitudeIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_altitude"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/altitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no_distance"
            android:textColor="@color/primary_high" />

        <ImageView
            android:id="@+id/speedIconView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_speed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/no_speed"
            android:textColor="@color/primary_high" />

    </LinearLayout>

    <Button
        android:id="@+id/emergencyButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_emergency"
        android:text="@string/emergency"
        android:textColor="@color/emergency"
        android:textSize="14sp"
        android:textStyle="normal|bold" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/paramsButton"
        android:clickable="true"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_download"
        tools:ignore="RelativeOverlap" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_flip" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/paramsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:clickable="true"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_settings" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/backFlipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/flipButton"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/flipButton"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_back_flip"
        tools:ignore="RelativeOverlap" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/rightFlipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flipButton"
        android:layout_alignEnd="@+id/flipButton"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_right_flip" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/leftFlipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flipButton"
        android:layout_toStartOf="@+id/backFlipButton"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_left_flip" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frontFlipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rightFlipButton"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/leftFlipButton"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/icon_background"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_front_flip"
        android:layout_marginStart="10dp" />

</RelativeLayout>